boost FUSE performance

--- a/bench/README
+++ b/bench/README
@@ -1,5 +1,9 @@
 Install fusexmp from fuse-2.9.3/example.
 
+Turn off CPU frequency scaling because FUSE is highly affected by it:
+
+  for f in /sys/devices/system/cpu/cpufreq/*/scaling_governor; do echo performance > $f; done
+
 Build sv6's mailbench:
 
   git clone git@g.csail.mit.edu:sv6 ~/proj/sv6
